# tech-challenge-fase-two

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.api.dockerignore  ENTREGA.txt  MODEL_CARD.md  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  render.yaml
.dvc/: config
.github/workflows/: ci.yml
configs/: params.yaml
data/processed/: .gitignore
deploy/artifacts/: metadata.json
deploy/huggingface/: README.md
docs/: API.md
metrics/: metrics.json
models/: .gitignore
scripts/: validate_env.py
src/: cli.py
src/api/: app.py
src/config/: params.py  settings.py
src/data/: loader.py  preprocess.py
src/evaluation/: evaluator.py  protocol.py
src/features/: encoding.py  split.py
src/models/: base.py  baselines.py  factory.py  neural.py
src/pipeline/: evaluate.py  experiment.py  featurize.py  preprocess.py  train.py
src/training/: trainer.py
tests/: test_api.py  test_baselines.py  test_encoding.py  test_evaluate_pipeline.py  test_evaluator.py  test_factory.py  test_neural.py  test_preprocess.py  test_protocol.py  test_settings.py  test_split.py
